--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "",
   "dependencies": {
     "node-red": "^0.20.5",
+    "node-red-contrib-mongodb3": "~2.0.1",
     "node-red-dashboard": "^2.13.2"
   }
 }
