--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "",
   "dependencies": {
-    "node-red": "^1.0.3",
+    "node-red": "^1.2.6",
     "node-red-contrib-auth": "~0.1.7",
+    "node-red-contrib-bcrypt": "0.0.49",
+    "node-red-contrib-gzip": "0.0.3",
     "node-red-contrib-mongodb3": "^2.0.1",
-    "node-red-contrib-nexmo": "~3.1.2",
-    "node-red-dashboard": "^2.19.3"
+    "node-red-contrib-nexmo": "~3.3.1",
+    "node-red-dashboard": "^2.25.0"
   }
 }
